# dta-floor-atlas

./: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml
docs/: index.html
docs/superpowers/plans/: 2026-04-28-dta-floor-atlas-plan-1-foundation-corpus-engines.md  2026-04-29-dta-floor-atlas-plan-2-floors-reporting.md  2026-04-29-dta-floor-atlas-plan-3a-pre-registration-ceremony.md  2026-04-29-dta-floor-atlas-plan-3b-production-run.md  2026-04-30-dta-floor-atlas-plan-3c-papers.md
docs/superpowers/specs/: 2026-04-28-dta-reproduction-floor-atlas-design.md
paper/: e156_body.md  synthesis_methods_note.md
prereg/: AMENDMENTS.md  IA_SNAPSHOT.md  PREREGISTRATION.md  freeze.py  frozen_thresholds.json
prereg/ots/: README.md  frozen_thresholds.json
scripts/: preflight_prereqs.py
src/dta_floor_atlas/: cli.py  preflight_gate.py  prevalence.py  r_bridge.py  report.py  signing.py  thresholds.py  types.py
src/dta_floor_atlas/corpus/: __init__.py  loader.py  manifest.py
tests/: __init__.py  conftest.py  test_cli.py  test_corpus_loader.py  test_corpus_manifest.py  test_dashboard.py  test_edge_cases.py  test_engine_canonical.py  test_engine_canonical_parity.py  test_engine_cascade.py  test_engine_copula.py  test_engine_invented.py  test_engine_moses.py  test_engine_reitsma.py  test_engines_integration_subset.py  test_floor_convergence.py  test_floor_decision_flip.py  test_floor_disagreement.py  test_floor_rescue.py  test_freeze.py  test_pipeline_integration.py  test_preflight_gate.py  test_prevalence.py  test_r_bridge.py  test_report.py  test_signing.py  test_thresholds.py
tests/parity_fixtures/: auditc_data_metafor_reference.json
(+13 files in other folders)
