[project]
name = "dta-floor-atlas"
version = "0.0.1"
description = "Empirical reproduction-floor analysis for diagnostic test accuracy meta-analysis on the DTA70 corpus"
authors = [{ name = "Mahmood Ahmad", email = "mahmood.ahmad2@nhs.net" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
